{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -33,7 +33,7 @@ Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch
 
 <h3><strong>MOE-OBS Camp 2024</strong></h3>
 Our Secondary 3 cohort embarked on a significant part of their secondary school education experience in Term One. They participated in the MOE-OBS Camp with students from 3 other schools.<br><br>
-Basking under the sun, our TKGians gained the valuable opportunity to get close to sand and sea during the 5D4N camp. Various activities helped them get to know other students from different schools as they took on the challenge of both land and sea expeditions. The high elements and team building activities imbued a stronger self-belief and the tenacity and adaptability to face ambiguous situations. <br><br>
+Basking under the sun, our TKGians had the valuable opportunity to get close to sand and sea during the 5D4N camp. Various activities helped them get to know students from different schools as they took on the challenge of both land and sea expeditions. The high elements and team building activities imbued a stronger self-belief and the tenacity and adaptability to face ambiguous situations. <br><br>
 Our girls came back with many exciting stories to share!  
 <center><img src="/images/Sparkling_Moment/2024/obs1.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/obs_teachstu.jpg"></center>
@@ -42,12 +42,14 @@ Our girls came back with many exciting stories to share!
 “I met some obstacles and even had disagreements with my OBS group mates. But I took them as  learning experiences and chose to persevere,” says Cyneveah Cheang (3I2) centre with two thumbs up. “In the end, I managed to achieve many great things including reaching our final destination after kayaking for 5 hours in open sea waters and under the blazing hot sun!” 
 
 
-<h3><strong>TKGlow</strong></h3>
-As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class. 
+<h3><strong>TKGlow! by Student Leaders' Network</strong></h3>
 <center><img src="/images/Sparkling_Moment/2024/tkglow1.png"></center>
-Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.
+As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class. 
 <center><img src="/images/Sparkling_Moment/2024/tkglow2.png"></center>
+Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.<br><br>
 The atmosphere was electric as laughter and camaraderie filled every corner of the school grounds. Every activity was a testament to the creativity and teamwork among the students.
+<br><br>
+To learn more about our TKGlow programme, click <a href="/learning-at-tkgs/signature-programmes/tkglow/" target="_blank" rel="noopener">here </a>.
 
 
 <h3><strong>Total Defence Day 2024</strong></h3>
