{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -49,7 +49,7 @@ As the first term came to a close, excitement filled the air during our bi-weekl
 Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.<br><br>
 The atmosphere was electric as laughter and camaraderie filled every corner of the school grounds. Every activity was a testament to the creativity and teamwork among the students.
 <br><br>
-To learn more about our TKGlow programme, click <a href="/learning-at-tkgs/signature-programmes/tkglow/" target="_blank" rel="noopener">here </a>.
+To learn more about our TKGlow! programme, click <a href="/learning-at-tkgs/signature-programmes/tkglow/" target="_blank" rel="noopener">here </a>.
 
 
 <h3><strong>Total Defence Day 2024</strong></h3>
