{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -31,7 +31,7 @@ Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch
 </div>
 
 
-<h3><strong>MOE-OBS Camp 2024</strong></h3>
+<h3><strong>MOE OBS Camp 2024</strong></h3>
 Our Secondary 3 cohort embarked on a significant part of their secondary school education experience in Term One. They participated in the MOE-OBS Camp with students from 3 other schools.<br><br>
 Basking under the sun, our TKGians had the valuable opportunity to get close to sand and sea during the 5D4N camp. Various activities helped them get to know students from different schools as they took on the challenge of both land and sea expeditions. The high elements and team building activities imbued a stronger self-belief and the tenacity and adaptability to face ambiguous situations. <br><br>
 Our girls came back with many exciting stories to share!  
