{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -32,14 +32,14 @@ Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch
 
 
 <h3><strong>MOE OBS Camp 2024</strong></h3>
-Our Secondary 3 cohort embarked on a significant part of their secondary school education experience in Term One. They participated in the MOE-OBS Camp with students from 3 other schools.<br><br>
+Our Secondary 3 cohort embarked on a significant part of their secondary school education experience in Term One. They participated in the MOE-OBS Camp with students from 3 other schools.
+<center><img src="/images/Sparkling_Moment/2024/obs1.png"></center>
 Basking under the sun, our TKGians had the valuable opportunity to get close to sand and sea during the 5D4N camp. Various activities helped them get to know students from different schools as they took on the challenge of both land and sea expeditions. The high elements and team building activities imbued a stronger self-belief and the tenacity and adaptability to face ambiguous situations. <br><br>
 Our girls came back with many exciting stories to share!  
-<center><img src="/images/Sparkling_Moment/2024/obs1.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/obs_teachstu.jpg"></center>
 “OBS gave me the opportunity to establish new friendships with people of different backgrounds, connect with nature, and allowed me to learn and apply values like perseverance and teamwork. I learnt to be grateful for everything I have,” says Victoria Ng (3C3), second from right. 
 <center><img src="/images/Sparkling_Moment/2024/obs_stud_water_.jpg"></center>
-“I met some obstacles and even had disagreements with my OBS group mates. But I took them as  learning experiences and chose to persevere,” says Cyneveah Cheang (3I2) centre with two thumbs up. “In the end, I managed to achieve many great things including reaching our final destination after kayaking for 5 hours in open sea waters and under the blazing hot sun!” 
+“I met some obstacles and even had disagreements with my OBS group mates. But I took them as  learning experiences and chose to persevere,” says Cyneveah Cheang (3I2) centre with two thumbs up. “In the end, I managed to achieve many great things including reaching our final destination after kayaking for 5 hours in open sea waters and under the blazing hot sun!”
 
 
 <h3><strong>TKGlow! by Student Leaders' Network</strong></h3>
