{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -22,6 +22,15 @@ description: ""
   </p>
 
 
+<h3><strong>Sec One PLD Unboxing</strong></h3>
+Our Secondary One students gathered in the school hall for a very special occasion today - the unboxing of their personal learning devices! The hall was filled with a delightful buzz as our students waited patiently in anticipation for their iPads. As part of the ceremony, Ms Chew, our principal, presented the devices to class representatives - a symbol of the trust bestowed on them to use the device purposefully for their learning in school and beyond the classroom. Students were also briefed on the various accessories that came together with their device and how to best use them. <br><br>At the end of the session, our students were excited about the learning possibilities with their iPads. <br><br>
+“I’m excited to start taking notes, tackle my SLS assignments and read online books on my iPad”, shares Eniya Senthilkumar (1I2).  
+<br><br>
+
+It was a day filled with anticipation as the Secondary One students patiently sat through the address by the vice principal and the logistics briefing by the HOD ICT. Next, the moment arrived where the Principal, Ms Chew presented the iPads to the class representatives. This marked the commencement of Secondary One iPad Unboxing day. The hall was a rupture of delight as the students let out their excitement.  In the midst of the furore, they were careful to lay their iPads and accessories in front of them, and they listened intently to the step-by-step instructions and set-up their iPads swiftly. By 10.10am, the students finished setting up their iPads. It took them less than an hour!  All this was made possible with the help of an experienced IT team. At the end of the session, the students were excited about the boundless possibilities learning with their iPads. “I can take notes, do my SLS assignments and read online books on my iPad now”, said Eniya from 1 Integrity.  
+
+
+
 <h3><strong>Highlights from Term One</strong></h3>
 Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch out Term One Highlights Video for a glimpse of what we have been up to. As the lyrics in the video goes, "…every chapter shapes and teaches us how to be better". Indeed we look forward to many teachable moments in the year ahead!<br><br>
 
