{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -24,7 +24,7 @@ description: ""
 
 <h3><strong>Sec One PLD Unboxing</strong></h3>
 <center><img src="/images/Sparkling_Moment/2024/unbox_main_1.jpg"></center>
-Our Secondary One students gathered in the school hall for a very special occasion today - the unboxing of their personal learning devices! The hall was filled with a delightful buzz as our students waited patiently in anticipation for their iPads. As part of the ceremony, Ms Chew, our principal, presented the devices to class representatives - a symbol of the trust bestowed on them to use the device purposefully for their learning in school and beyond the classroom. Students were also briefed on the various accessories that came together with their device and how to best use them.
+Our Secondary One students gathered in the school hall for a very special occasion today - the unboxing of their personal learning devices! The hall was filled with a delightful buzz as our students waited patiently in anticipation for their iPads. As part of the ceremony, Ms Chew, our Principal, presented the devices to class representatives - a symbol of the trust bestowed on them to use the device purposefully for their learning in school and beyond the classroom. Students were also briefed on the various accessories that came together with their device and how to best use them. 
 <center><img src="/images/Sparkling_Moment/2024/unbox1.png"></center>
 At the end of the session, our students were excited about the learning possibilities with their iPads. <br><br>
 “I’m excited to start taking notes, tackle my SLS assignments and read online books on my iPad”, shares Eniya Senthilkumar (1I2).  
