{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -22,12 +22,12 @@ description: ""
   </p>
 
 
-<h3><strong>Sec One PLD Unboxing</strong></h3>
-<center><img src="/images/Sparkling_Moment/2024/unbox_main_1.jpg"></center>
-Our Secondary One students gathered in the school hall for a very special occasion today - the unboxing of their personal learning devices! The hall was filled with a delightful buzz as our students waited patiently in anticipation for their iPads. As part of the ceremony, Ms Chew, our Principal, presented the devices to class representatives - a symbol of the trust bestowed on them to use the device purposefully for their learning in school and beyond the classroom. Students were also briefed on the various accessories that came together with their device and how to best use them. 
-<center><img src="/images/Sparkling_Moment/2024/unbox_layout2.png"></center>
-At the end of the session, our students were excited about the learning possibilities with their iPads. <br><br>
-“I’m excited to start taking notes, tackle my SLS assignments, and read online books on my iPad,” shares Eniya Senthilkumar (1I2).
+<h3><strong>Mums@Glow Up! International Friendship Day Activity</strong></h3>
+On 4 April 2024, our Mums for Life volunteers joined TKGians for the Mums@Glow Up! International Friendship Day celebrations. They made heart-shaped knots with our students which symbolises the love and unity amongst friends and countries. The activity was a meaningful way to have fun, and provide support and encouragement for our students. 
+<center><img src="/images/Sparkling_Moment/2024/mums_glowup1.png"></center>
+<center><img src="/images/Sparkling_Moment/2024/mums_glowup2.png"></center>
+“ Being a parent volunteer has brought me closer to my daughters, schoolmates and school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!”  to provide opportunity 
+
 
 
 <h3><strong>Highlights from Term One</strong></h3>
@@ -48,6 +48,14 @@ Our girls came back with many exciting stories to share!
 “OBS gave me the opportunity to establish new friendships with people of different backgrounds, connect with nature, and allowed me to learn and apply values like perseverance and teamwork. I learnt to be grateful for everything I have,” says Victoria Ng (3C3), second from right. 
 <center><img src="/images/Sparkling_Moment/2024/obs_stud_water_.jpg"></center>
 “I met some obstacles and even had disagreements with my OBS group mates. But I took them as  learning experiences and chose to persevere,” says Cyneveah Cheang (3I2) centre with two thumbs up. “In the end, I managed to achieve many great things including reaching our final destination after kayaking for 5 hours in open sea waters and under the blazing hot sun!”
+
+
+<h3><strong>Sec One PLD Unboxing</strong></h3>
+<center><img src="/images/Sparkling_Moment/2024/unbox_main_1.jpg"></center>
+Our Secondary One students gathered in the school hall for a very special occasion today - the unboxing of their personal learning devices! The hall was filled with a delightful buzz as our students waited patiently in anticipation for their iPads. As part of the ceremony, Ms Chew, our Principal, presented the devices to class representatives - a symbol of the trust bestowed on them to use the device purposefully for their learning in school and beyond the classroom. Students were also briefed on the various accessories that came together with their device and how to best use them. 
+<center><img src="/images/Sparkling_Moment/2024/unbox_layout2.png"></center>
+At the end of the session, our students were excited about the learning possibilities with their iPads. <br><br>
+“I’m excited to start taking notes, tackle my SLS assignments, and read online books on my iPad,” shares Eniya Senthilkumar (1I2).
 
 
 <h3><strong>TKGlow! by Student Leaders' Network</strong></h3>
