--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -22,7 +22,7 @@ description: ""
   </p>
 
 
-<h3><strong>Mums@Glow Up! International Friendship Day Activity</strong></h3>
+<h3><strong>Mums@Glow Up!</strong></h3>
 On 4 April 2024, our Mums for Life volunteers joined TKGians for the Mums@Glow Up! International Friendship Day celebrations. They made heart-shaped knots with our students which symbolises the love and unity amongst friends and countries. The activity was a meaningful way to have fun, and provide support and encouragement for our students. 
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup1.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup2.png"></center>
