--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -22,11 +22,69 @@ description: ""
   </p>
 
 
+<h3><strong>71st Speech and Prize Giving Day</strong></h3>
+<p>On 13 April 2024, the school commemorated its 71st Speech and Prize-Giving Day. It was a special occasion that not only celebrated individual excellence in both academic and non-academic areas, but also honoured the school’s collective strength and effort in uplifting our students. </p>
+<table>
+  <tbody><tr>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_1_r.jpg"></td>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_2_r.jpg"></td>
+  </tr>
+</tbody></table>
+<table>
+  <tbody><tr>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_3_r.jpg"></td>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_4_r.jpg"></td>
+  </tr>
+</tbody></table>
+
+<p>In line with our school theme this year, Luceat Omnibus (‘Courage and Light’) - Shine for All, the ceremony highlighted the importance of pursuing our passions with fortitude and serving others with a heart of humility and gratitude.</p>
+<p>Our Guest of Honour, Mr Joseph See from Agape Singapore, delivered an inspiring speech on his journey of leading a purposeful and meaningful life. Titled “From Corporate Ladder to Leading with Purpose”, his speech inspired all with his courage in taking the unbeaten path and conviction in impacting the lives of the less privileged in Singapore. </p>
+<table>
+  <tbody><tr>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_5_r.jpg"></td>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_6_r.jpg"></td>
+  </tr>
+</tbody></table>
+<p>
+In the same vein, our Valedictorian, Belinda Koh, spoke about the leap of faith that she took when she was appointed Vice-Head Prefect and the encouragement that she received in school which helped her to overcome her self-doubts.</p>
+<p>“Every moment shared with my friends in TKGS serves as a cherished memory. Although fleeting, these moments were rich with laughter, tears, victories, and challenges, reflecting our growth as individuals. Each memory has imprinted itself upon my heart, shaping the person I am today.” – Belinda Koh, Valedictorian of Class 2023. </p>
+<table>
+  <tbody><tr>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_7_r2.jpg"></td>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_8_r.jpg"></td>
+  </tr>
+</tbody></table>
+<table>
+  <tbody><tr>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_12_r.jpg"></td>
+    <td style="width: 50%;"><img style="width: 100%; height: auto;" src="/images/Sparkling_Moment/2024/71speechday_11_r.jpg"></td>
+  </tr>
+</tbody></table>
+<p>In a true act of collective support, the event was graced by staff, students, alumni as well as friends of the school. Our Dance, String Ensemble and Choir also put up wonderful performances which added sparks to the memorable and heartwarming occasion. As a meaningful conclusion to the event, student leaders engaged in a conversation with Mr Joseph See at the reception to learn more from his wealth of experience. </p>
+<center><img src="/images/Sparkling_Moment/2024/71speechday_10_r.jpg"></center>
+
+
+<h3><strong>International Friendship Day Celebrations</strong></h3>
+<center><img src="/images/Sparkling_Moment/2024/ifd_1.jpg"></center>
+<p>The theme for this year’s International Friendship Day was “Singapore in Asia”, where our school’s celebration took place over several days. We were treated to a medley of ASEAN folks songs during our lunch break, learned fun facts about different cultures and participated in different  hands-on activities. </p>
+<center><img src="/images/Sparkling_Moment/2024/ifd_2.png"></center>
+<p>The Glow Up centre was abuzz with various activities designed by our international students who were excited to share about their culture and lives. Students and staff had opportunities to design Batik bookmarks, make a Krathong (water float), tie a Chinese knot and play Japanese games. They also had fun at the photobooth, getting dressed in international costumes and taking pictures with backdrops of key landmarks in Asia. It was a meaningful time of bonding for our students of different cultures and background to get to know each other better.</p>
+<center><img src="/images/Sparkling_Moment/2024/ifd_3_r.jpg"></center>
+<p>“I enjoyed the opportunity to share with others about my country Thailand. It was a great experience to host the booth at the Glow Up Centre,” says Nalinrat Deeratanasrikul (4S5).</p>
+
+
+<h3><strong>Self Initiated Staff Bonding</strong></h3>
+<p>At TKGS, staff who work hard, play harder! Every odd week Friday morning,  our staff spends time together for a spot of fun and meaningful activities. These activities are initiated and curated by our very own staff!</p>
+<center><img src="/images/Sparkling_Moment/2024/sibonding_t1_r.png"></center>
+<p>Whether it is a balmy walk around the local neighbourhood, sweating it out in a chosen sport, or getting our hands dirty with some craft work, such moments are a must-have for staff to take a breather, recharge and connect with one another.
+The casual ambience also allows time for relaxed conversations to be had. Indeed through these self-initiated staff bonding activities, we see the warm and congenial spirit in TKGS which allows for a positive workplace culture in our school. </p>
+
+
 <h3><strong>Mums@Glow Up!</strong></h3>
 On 4 April 2024, our Mums for Life volunteers joined TKGians for the Mums@Glow Up! International Friendship Day celebrations. They made heart-shaped knots with our students which symbolises the love and unity amongst friends and countries. The activity was a meaningful way to have fun, and provide support and encouragement for our students. 
-<center><img src="/images/Sparkling_Moment/2024/mums_glowup1.png"></center>
+<center><img src="/images/Sparkling_Moment/2024/mums_glowup1_f.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup2.png"></center>
-“ Being a parent volunteer has brought me closer to my daughters, schoolmates and school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!”  
+“ Being a parent volunteer has brought me closer to my daughters, schoolmates and school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!"
 
 
 <h3><strong>Highlights from Term One</strong></h3>
