--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -72,7 +72,7 @@ In the same vein, our Valedictorian, Belinda Koh, spoke about the leap of faith 
 
 
 <h3><strong>Self Initiated Staff Bonding</strong></h3>
-<p>At TKGS, staff who work hard, play harder! Every odd week Friday morning,  our staff spends time together for a spot of fun and meaningful activities. These activities are initiated and curated by our very own staff!</p>
+<p>At TKGS, our staff work hard, play harder! Every odd week Friday morning, our staff spends time together for a spot of fun and meaningful activities. These activities are initiated and curated by our very own staff!</p>
 <center><img src="/images/Sparkling_Moment/2024/sibonding_t1_r.png"></center>
 <p>Whether it is a balmy walk around the local neighbourhood, sweating it out in a chosen sport, or getting our hands dirty with some craft work, such moments are a must-have for staff to take a breather, recharge and connect with one another.
 The casual ambience also allows time for relaxed conversations to be had. Indeed through these self-initiated staff bonding activities, we see the warm and congenial spirit in TKGS which allows for a positive workplace culture in our school. </p>
@@ -82,7 +82,7 @@ The casual ambience also allows time for relaxed conversations to be had. Indeed
 On 4 April 2024, our Mums for Life volunteers joined TKGians for the Mums@Glow Up! International Friendship Day celebrations. They made heart-shaped knots with our students which symbolises the love and unity amongst friends and countries. The activity was a meaningful way to have fun, and provide support and encouragement for our students. 
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup1_f.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup2.png"></center>
-“Being a parent volunteer has brought me closer to my daughters, schoolmates and school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!"
+“Being a parent volunteer has brought me closer to my daughters, the schoolmates and the school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!"
 
 
 <h3><strong>Highlights from Term One</strong></h3>
