--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -11,8 +11,7 @@ variant: markdown
     Introduced in 2019, it has become a tradition for students and staff to recollect significant moments 
     that touched them in the year. We call it TKGS Sparkling Moments. It gives students the opportunity 
     to express what they appreciate of the school, teachers and classmates. TKGS Sparkling Moments 
-    could be amazing accomplishments by individuals, teams and classes. They are also cherished 
-    of school events like Leaders Investiture, and the moment of pride winning a class competition. 
+    could be amazing accomplishments by individuals, teams and classes. They are also cherished memories of school events like Leaders Investiture, and the moment of pride winning a class competition. 
     Or it could be times when teachers and students are inspired by the team work and class spirit 
     shown during cohort camps, Sports Carnival, the fortnightly TK GLOW! and TK Spirit Week. 
     More often than not, the Sparkling Moments we love are the simple, ordinary things we do in our 
