{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -82,7 +82,7 @@ The casual ambience also allows time for relaxed conversations to be had. Indeed
 On 4 April 2024, our Mums for Life volunteers joined TKGians for the Mums@Glow Up! International Friendship Day celebrations. They made heart-shaped knots with our students which symbolises the love and unity amongst friends and countries. The activity was a meaningful way to have fun, and provide support and encouragement for our students. 
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup1_f.png"></center>
 <center><img src="/images/Sparkling_Moment/2024/mums_glowup2.png"></center>
-“Being a parent volunteer has brought me closer to my daughters, the schoolmates and the school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!"
+“Being a parent volunteer has brought me closer to my daughters, their schoolmates and the school environment,” shares Ms Alaine Poon, parent of Isabella Poon (1R1). “When I see the joy and smiles on their faces, the time and effort we put in is worth it!"
 
 
 <h3><strong>Highlights from Term One</strong></h3>
