--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -21,6 +21,32 @@ description: ""
   </p>
 
 
+<h3><strong>Highlights from Term 2</strong></h3>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe title="Highlight from Term 2 2024" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" frameborder="0" src="https://player.vimeo.com/video/950752812?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"></iframe></div>
+
+Welcome to our Term 2 Highlights video! Sit back, relax, and enjoy a glimpse into the heart and soul of our school community. Enjoy the exciting events, achievements, and memorable moments that defined our term!
+
+
+<h3><strong> Student Leaders’ Investiture</strong></h3>
+<img src="/images/Sparkling_Moment/2024/LI24_1.png">
+<p>The annual Leaders' Investiture is a cherished event, celebrating the honour bestowed upon our student leaders to lead and serve the school community. During the investiture, we meaningfully invested our Sec 3 Student Leaders into the four leadership boards: Class Committee, CCA Leaders, House Committee, and the Prefectorial Board. 
+	<img src="/images/Sparkling_Moment/2024/LI24_2.png">	
+This was done whilst formally recognizing the contributions and legacy of our Sec 4 Student Leaders. The heads of each board took to the stage to introduce their members, express gratitude to the Sec 4 leaders, and warmly welcome the new Sec 3 leaders.</p>
+<img src="/images/Sparkling_Moment/2024/LI24_3.png">
+<p>This year, we had the privilege of having Dr Tan Lai Yong to grace the occasion as our guest speaker. Dr Tan captivated the audience with inspiring stories from his life in Yunnan, China, sharing invaluable lessons on resilience, community service and leadership. His words left a profound impact on both the student leaders and the school community.</p>
+<p>The ceremony culminated with all leaders taking the Leaders' Creed, pledging their commitment to uphold the values and responsibilities of their roles. It was a moment of pride and promise for the future.</p>
+<p><i>Photographs taken by Jeyalal Danyasree (3I2), Mr Lee Wei Xun and Mr Ryan Law</i></p>
+
+
+<h3><strong>Girl Guides East Division Day</strong></h3>
+<p>On 26 April 2024, TKGS played host to Brownies and Guides from 35 secondary and primary schools in commemoration of the Girl Guides East Division Day (EDD). It was an honour to serve the Girl Guides community in providing a space to promote leadership, service and personal development growth.  This year’s theme was “Our World, Our Thriving Future.”, aiming to empower the girls to become active eco-stewards. Indeed, our brownies and girl guides from the schools in the east showcased a myriad of talents – from sports, dance, recycled fashion design to gadgets-making for the environment. 
+</p>
+<img src="/images/Sparkling_Moment/2024/GGEDD_1.jpg">
+<p>“I felt a sense of pride when many of my new friends from other schools praised the school environment, especially our verdant greenery. I also enjoyed holding casual conversations with guides from other schools, understanding how guide sessions are held in their school and learning from them. After this EDD experience, I learnt how to convey my thoughts more effectively, how to work with others and accept their views.” says TKGS guide, Alicia Han (3C3) </p>
+<img src="/images/Sparkling_Moment/2024/GGEDD_3.png">
+<p>“My team and I took part in the Semaphore Drill performance and got merit! Although there were little hiccups, we overcame them and left with little regrets. More importantly, I learnt an important lesson from this EDD - to BE PREPARED. We had little time to prepare and practise for EDD, leading to some mistakes in our performance and flag party. However, as a leader, I learnt to apply the 7th Guide Law, to HAVE COURAGE and BE CHEERFUL in all difficulties, and also to influence my own guides and cheer them up. Instead of dwelling over past mistakes, we should take action, be prepared, and improve.” says Changkat Changi Secondary School guide, Grace Chew.</p>
+
+
 <h3><strong>71st Speech and Prize Giving Day</strong></h3>
 <p>On 13 April 2024, the school commemorated its 71st Speech and Prize-Giving Day. It was a special occasion that not only celebrated individual excellence in both academic and non-academic areas, but also honoured the school’s collective strength and effort in uplifting our students. </p>
 <table>
@@ -70,6 +96,16 @@ In the same vein, our Valedictorian, Belinda Koh, spoke about the leap of faith 
 <center><img src="/images/Sparkling_Moment/2024/ifd_3_r.jpg"></center>
 <p>“I enjoyed the opportunity to share with others about my country Thailand. It was a great experience to host the booth at the Glow Up Centre,” says Nalinrat Deeratanasrikul (4S5).</p>
 
+
+<h3><strong>Head Prefect Elections Campaign</strong></h3>
+<p>The Head Prefect campaign was a vibrant event with four outstanding candidates: Chua Xin Yun (3I2), Clesias Yeo (3R6), Charlotte Koh (3I2), and Olivia Lu (3C3) . Each candidate showcased their unique vision and strengths through colourful campaign posters plastered around the school. </p>
+<p>During the lunch breaks, the candidates took to the Glow Up! room, where friends introduced them, highlighting their strengths and unique qualities. Each candidate also put up a performance with their friends to engage the student body. </p>
+<img src="/images/Sparkling_Moment/2024/HPC_1.png">
+<p>The campaign culminated in a series of speeches where each candidate passionately presented their plans for the school. A Q&amp;A segment followed, putting them to the test with questions from their peers, addressing concerns and ideas for the future of Tanjong Katong Girls’ School. </p>
+<img src="/images/Sparkling_Moment/2024/HPC_2.png">
+<p>After two weeks of spirited campaigning, we are proud to announce the results: 
+Head of School Culture: Clesias, Head of Student Wellbeing: Charlotte, Vice-Head Prefect Xin Yun and our Head Prefect: Olivia.</p>
+<p>Congratulations and we look forward to the positive changes these leaders will bring! </p>
 
 <h3><strong>Self Initiated Staff Bonding</strong></h3>
 <p>At TKGS, our staff work hard, play harder! Every odd week Friday morning, our staff spends time together for a spot of fun and meaningful activities. These activities are initiated and curated by our very own staff!</p>
