{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -28,7 +28,7 @@ description: ""
 Welcome to our Term 2 Highlights video! Sit back, relax, and enjoy a glimpse into the heart and soul of our school community. Enjoy the exciting events, achievements, and memorable moments that defined our term!
 
 
-<h3><strong> Student Leaders’ Investiture</strong></h3>
+<h3><strong> Student Leaders’ Investiture</strong></h3><br>
 <img src="/images/Sparkling_Moment/2024/LI24_1.png">
 <p>The annual Leaders' Investiture is a cherished event, celebrating the honour bestowed upon our student leaders to lead and serve the school community. During the investiture, we meaningfully invested our Sec 3 Student Leaders into the four leadership boards: Class Committee, CCA Leaders, House Committee, and the Prefectorial Board. 
 	<img src="/images/Sparkling_Moment/2024/LI24_2.png">	
@@ -105,7 +105,7 @@ In the same vein, our Valedictorian, Belinda Koh, spoke about the leap of faith 
 <p>The campaign culminated in a series of speeches where each candidate passionately presented their plans for the school. A Q&amp;A segment followed, putting them to the test with questions from their peers, addressing concerns and ideas for the future of Tanjong Katong Girls’ School. </p>
 <img src="/images/Sparkling_Moment/2024/HPC_2.png">
 <p>After two weeks of spirited campaigning, we are proud to announce the results: 
-Head of School Culture: Clesias, Head of Student Wellbeing: Charlotte, Vice-Head Prefect Xin Yun and our Head Prefect: Olivia.</p>
+	<br><b>Head Prefect</b>: Olivia Lu<br><b>Vice-Head Prefect</b>:  Chua Xin Yun<br><b>Head of School Culture</b>: Clesias Yeo<br> <b>Head of Student Wellbeing</b>: Charlotte Koh</p>
 <p>Congratulations and we look forward to the positive changes these leaders will bring! </p>
 
 <h3><strong>Self Initiated Staff Bonding</strong></h3>
