--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -39,6 +39,14 @@ This was done whilst formally recognizing the contributions and legacy of our Se
 <p><i>Photographs taken by Jeyalal Danyasree (3I2), Mr Lee Wei Xun and Mr Ryan Law</i></p>
 
 
+<h3><strong>Hari Raya and Tamil New Year Celebration</strong></h3>
+<p>On April 26th, our school came together to celebrate Hari Raya and the Tamil New Year. The celebrations kickstarted with a Hari Raya performance by Wira Budaya. The lively skit provided insights into the global celebrations of Ramadan and Hari Raya. It then culminated in a spirited dance performance to the tune of Alamak Raya Lagi, where our students and staff jumped at the chance to join the performers on stage. The atmosphere was electric with shouts of encouragement as they gamely danced to the beat.</p>
+<img src="/images/Sparkling_Moment/2024/HRTNY_1.png">
+<p>“The skit helped me to better understand what my peers go through during Ramadan and Hari Raya and I gained a new appreciation of Malay food and culture.” says Dayna Maha (3H4).</p>
+<img src="/images/Sparkling_Moment/2024/HRTNY_2.png">
+<p>Next, AKT Creations took to the stage to share more about how the Tamil New Year is celebrated. They presented a  rich and colourful medley of Tamil traditional art forms which included the Mayilattam (peacock dance) and Purviyattam (horse dance). The performances were accompanied with live music played on the traditional Mathalam drum. “The concert was very fun! I loved it when the teachers were called on stage to try out dancing as a horse!” shares Sana Raghuraman (1I2). </p>
+
+
 <h3><strong>Girl Guides East Division Day</strong></h3>
 <p>On 26 April 2024, TKGS played host to Brownies and Guides from 35 secondary and primary schools in commemoration of the Girl Guides East Division Day (EDD). It was an honour to serve the Girl Guides community in providing a space to promote leadership, service and personal development growth.  This year’s theme was “Our World, Our Thriving Future.”, aiming to empower the girls to become active eco-stewards. Indeed, our brownies and girl guides from the schools in the east showcased a myriad of talents – from sports, dance, recycled fashion design to gadgets-making for the environment. 
 </p>
