{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -21,14 +21,14 @@ description: ""
   </p>
 
 
-<h3><strong>Highlights from Term 2</strong></h3>
+<h3><strong>Highlights from Term 2</strong></h3><br>
 
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="Highlight from Term 2 2024" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" frameborder="0" src="https://player.vimeo.com/video/950752812?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"></iframe></div>
 
 Welcome to our Term 2 Highlights video! Sit back, relax, and enjoy a glimpse into the heart and soul of our school community. Enjoy the exciting events, achievements, and memorable moments that defined our term!
 
 
-<h3><strong> Student Leaders’ Investiture</strong></h3><br>
+<h3><strong> Student Leaders’ Investiture</strong></h3>
 <img src="/images/Sparkling_Moment/2024/LI24_1.png">
 <p>The annual Leaders' Investiture is a cherished event, celebrating the honour bestowed upon our student leaders to lead and serve the school community. During the investiture, we meaningfully invested our Sec 3 Student Leaders into the four leadership boards: Class Committee, CCA Leaders, House Committee, and the Prefectorial Board. 
 	<img src="/images/Sparkling_Moment/2024/LI24_2.png">	
