--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -21,7 +21,7 @@ description: ""
   </p>
 
 
-<h3><strong>Highlights from Term 2</strong></h3><br>
+<h3><strong>Highlights from Term 2</strong></h3>
 
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="Highlight from Term 2 2024" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" frameborder="0" src="https://player.vimeo.com/video/950752812?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"></iframe></div>
 
