{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -21,12 +21,32 @@ description: ""
   </p>
 
 
+<h3><strong>EAS Learning Journey</strong></h3>
+<img src="/images/Sparkling_Moment/2024/EASLJ_june.png">
+
+<p>The School Administration Team visited the Green Lab Singapore on 3rd June, where we learned about their pioneering efforts in sustainability. We were introduced to Green Lab's mission to become a one-stop provider for sustainable solutions and their latest innovation, the Casaa 180™, a plant-based biodegradable bag. The tour offered us a glimpse into their production line, showcasing how the bags, as well as products such as compostable food-grade containers and even books, were made. The session ended with us making our very own Bioplastic bowl as a souvenir to take home.</p>
+<img src="/images/Sparkling_Moment/2024/EASLJ_june2.png">
+<p>Mdm Rohayah Bte Sarpin, our Operations Support Officer, offered the following insight on the session:</p>
+<p>"I caught a behind-the-scenes glimpse of how businesses are working towards a more sustainable future. The session also reminded us that there is no replacement for our planet Earth and we should do our part to preserve it."</p>
+
+
 <h3><strong>Highlights from Term 2</strong></h3>
 
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="Highlight from Term 2 2024" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" frameborder="0" src="https://player.vimeo.com/video/950752812?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"></iframe></div>
 
 Welcome to our Term 2 Highlights video! Sit back, relax, and enjoy a glimpse into the heart and soul of our school community. Enjoy the exciting events, achievements, and memorable moments that defined our term!
 
+
+<h3><strong>Term 2 TK Spirit Week</strong></h3>
+<img src="/images/Sparkling_Moment/2024/TKSW_CP.jpg">
+
+<p>Our students ended the semester on a high with TKGS Spirit Week! A signature programme for our school, our students participated in a myriad of activities, creating shared memories with their cohort and classes, as they took learning beyond the classroom.</p>
+<img src="/images/Sparkling_Moment/2024/T2_SW1.png">
+<p>This included a visit to the Bird Paradise for the Secondary One students, learning journeys to various institutions as part of the Secondary Two Career Seminar and a Heritage Trail of the TKGS Neighbourhood for the Secondary Three students.</p>
+
+<p>The TKGS Spirit Week was especially memorable for the Secondary Four students. With a focus on self-directed class experiences, C-SPARKS in TKGS allowed the graduating cohort to organise their self-initiated final class activity before graduation. The students had great fun as they came up with creative ideas such as ice-skating lessons at Kallang Ice World and picnics at East Coast Park. </p>
+<img src="/images/Sparkling_Moment/2024/T2_SW2.png">
+<p>“The high point for me this year was C Sparks where we played at the beach, took photos, sang songs and played volleyball. Everyone was just having fun together,” quipped Nur Erynna Ng (4S5) </p>
 
 <h3><strong> Student Leaders’ Investiture</strong></h3>
 <img src="/images/Sparkling_Moment/2024/LI24_1.png">
