{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -21,6 +21,17 @@ description: ""
   </p>
 
 
+<h3><strong>Riding the Waves of Mural</strong></h3>
+<img src="/images/Sparkling_Moment/2024/ma_hero.jpg">
+
+<p>To celebrate the opening of the Tanjong Katong MRT Station on the Thomson-East Coast line, students from our school, guided by Mdm Kavitha were invited to design a mural to be displayed at the station. </p>
+<img src="/images/Sparkling_Moment/2024/ma_a1.png">
+<p>Titled 'Riding the Waves of Change',This artwork portrays Katong’s transformation from a charming Peranakan enclave to a modern urban district, projecting into a dynamic future. Central to this narrative is the now extinct Katong Turtle. It is a symbol of our treasured history and commitment to sustainability as we continue to ride the waves of change. </p>
+<p>“In my contribution to the mural, I used watercolour pencils to shade and colour the turtle to make come alive. I also learnt the history of the Tanjong Katong area and how its name came to be.” says student artist Leah Tan (3R1)</p>
+<img src="/images/Sparkling_Moment/2024/ma_a2.png">
+<p>On 24 June, we  had the honour of presenting the artwork to Mr. Lim Biow Chuan, Advisor to Mountbatten SMC, celebrating our efforts to bring the arts to our community. 
+If you are around the area, do swing by the station to enjoy the mural! </p>
+
 <h3><strong>EAS Learning Journey</strong></h3>
 <img src="/images/Sparkling_Moment/2024/EASLJ_june.png">
 
