{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -30,7 +30,7 @@ description: ""
 <p>This year, TKGS had two songs selected and they were:<br>
 “Hero Too” by Thawdar Hnin Htet Kaylen (3C3)  <br>
 “Daisy” by Ni Wayan Tara Shakila Binte Andiyanta, Tanya Sandeep Nair and Esther John (2I2)<br></p>
-<p>Both songs were presented at the “Youth Station Live!” SYF Celebration event at The Pod (National Library) over the Youth Day weekend to screams of delight and support from school leaders, teachers, parents and friends.</p>
+<p>Both songs were presented at the “Youth Station Live!” SYF Celebration event at The Pod (National Library) over the Youth Day weekend to screams of delight and support from school leader, teachers, parents and friends.</p>
 <p>Here is Kaylen performing her song “Hero Too”.</p>
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
 	<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/xDTi6WJ7zXE?si=Q3xmKv8E6qjCiFwd">
