--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -4,6 +4,17 @@ permalink: /tkgs-sparkling-moments/2024/
 variant: markdown
 description: ""
 ---
+
+<h3><strong>TKGlow! by Student Leaders' Network</strong></h3>
+<center><img src="/images/Sparkling_Moment/2024/tkglow1.png"></center>
+As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class. 
+<center><img src="/images/Sparkling_Moment/2024/tkglow2.png"></center>
+Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.<br><br>
+The atmosphere was electric as laughter and camaraderie filled every corner of the school grounds. Every activity was a testament to the creativity and teamwork among the students.
+<br><br>
+To learn more about our TKGlow! programme, click <a href="/learning-at-tkgs/signature-programmes/tkglow/" target="_blank" rel="noopener">here </a>.
+
+--- all coding ---
 <center>
   <h3><strong>TKGS Sparkling Moments</strong></h3>
 </center>
@@ -326,6 +337,16 @@ Our Secondary One students gathered in the school hall for a very special occasi
 <center><img src="/images/Sparkling_Moment/2024/unbox_layout2.png"></center>
 At the end of the session, our students were excited about the learning possibilities with their iPads. <br><br>
 “I’m excited to start taking notes, tackle my SLS assignments, and read online books on my iPad,” shares Eniya Senthilkumar (1I2).
+
+
+<h3><strong>TKGlow! by Student Leaders' Network</strong></h3>
+<center><img src="/images/Sparkling_Moment/2024/tkglow_1r.png"></center>
+As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class. 
+<center><img src="/images/Sparkling_Moment/2024/tkglow2.png"></center>
+Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.<br><br>
+The atmosphere was electric as laughter and camaraderie filled every corner of the school grounds. Every activity was a testament to the creativity and teamwork among the students.
+<br><br>
+To learn more about our TKGlow! programme, click <a href="/learning-at-tkgs/signature-programmes/tkglow/" target="_blank" rel="noopener">here </a>.
 
 
 <h3><strong>Total Defence Day 2024</strong></h3>
