--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -22,7 +22,7 @@ description: ""
 
 
 <h3><strong>Celebrating our TKGS Alumni</strong></h3>
-From time to time, our school receives news of how our students are doing in their post-secondary endeavours. It fills us with joy, knowing that they are doing well beyond the walls of TKGS and that we have played a part in their scholastic journey
+<p>From time to time, our school receives news of how our students are doing in their post-secondary endeavours. It fills us with joy, knowing that they are doing well beyond the walls of TKGS and that we have played a part in their scholastic journey.</p>
 
 <p>Please join us in congratulating the following TKGS Alumni on their notable achievements!</p>
 
@@ -53,6 +53,16 @@ From time to time, our school receives news of how our students are doing in the
 			</td>
 		</tr>
 		<tr>
+			<td>Chai Moon Teng
+			</td>
+			<td>2020
+			</td>
+			<td>Republic Polytechnic
+			</td>
+			<td>2024 Merit Award - Diploma in Biotechnology
+			</td>
+		</tr>
+		<tr>
 			<td>Drea Lai Jie Ning
 			</td>
 			<td>2020
@@ -60,6 +70,16 @@ From time to time, our school receives news of how our students are doing in the
 			<td>Singapore Polytechnic
 			</td>
 			<td>2024 Top Graduate - Diploma in Architecture
+			</td>
+		</tr>
+		<tr>
+			<td>Nur Fa'iqah Putri Azman
+			</td>
+			<td>2020
+			</td>
+			<td>Republic Polytechnic
+			</td>
+			<td>2024 Merit Award - Diploma in Arts &amp; Theatre Management
 			</td>
 		</tr>
 		<tr>
