{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -136,6 +136,14 @@ description: ""
 </table>
 
 
+<h3><strong>Highlights from Term 3</strong></h3>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+		<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/J0Aig1uWMXs?si=bVZMPIEJb69IO8o9">
+	</iframe>
+</div>
+<p>Another Term has come to an end! Watch our Term 3 highlights video and relive the excitement and warmth of our TKGS family! Our experiences certainly take us beyond the classroom, together as one!</p>
+
+
 <h3><strong>Together, As One United People</strong></h3>
 <img src="/images/Sparkling_Moment/2024/NDP_Hero.png">
 
