{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -136,6 +136,29 @@ description: ""
 </table>
 
 
+<h3><strong>Class of 2024 Graduation: A day of Farewells and Beginnings</strong></h3>
+<img src="/images/Sparkling_Moment/2024/GDN_hero.png">
+
+<p>On 20 September, our Sec 4 classes marked a bittersweet milestone with their long-awaited graduation. The school hall, transformed into a vibrant wonderland, was the perfect setting for this celebration of their secondary school journey.</p>
+
+<p>The celebrations kickstarted in the morning with a rousing fanfare as the graduating class walked into the school hall to thunderous applause. The morning assembly was then spent on the journey of this graduating batch, from the different milestones to challenges that shaped them into the fine women they are.</p>
+
+<img src="/images/Sparkling_Moment/2024/GDN_1.png">
+
+<p>In the evening, the hall was transformed into a vibrant space to welcome our guests for Grad Nite. Our students came dressed in their finest attire, radiating elegance. Laughter and music filled the air, as friendships were cemented and memories made. From performances by our students and even parents to speeches by the class leaders, the evening clearly showed the strong bonds that had been forged over the years.</p>
+
+<p>“I feel a mix of sadness and gratitude. These four years flew by really quickly and I’m really grateful for all my friends and teachers that helped me throughout this journey, making my time in TKGS unforgettable,” reflects Teng Jing Yi (4I2).</p>
+
+<img src="/images/Sparkling_Moment/2024/GDN_3.png"><br>
+<img src="/images/Sparkling_Moment/2024/GDN_2.png">
+
+<p>One of the highlights of the evening was the inspiring address by our alumni - Jewelle Woo and Shruti Ravindran (Class of 2015). Their return serves as a powerful reminder of the school's legacy and the opportunities that await our graduating class. They shared their personal journeys, offering valuable insights and words of encouragement for our students as they embark on their own adventures.</p>
+
+<p>“The future is wide open for us, and though we might stumble along the way, we’ll get back up. We’re ready to face whatever comes next, whether it’s O Levels, our further studies, or finally catching up on all the sleep we have missed out on,” shares Priya Ramesh and Liaw Ann Sze (4H4). </p>
+
+<p>A bittersweet symphony of farewells and beginnings, the night drew to a close, leaving an indelible mark on all who attended. It was not just a celebration of achievements but a poignant send-off, a reminder that while one chapter closed, another, filled with endless possibilities, was just beginning.</p>
+
+
 <h3><strong>Highlights from Term 3</strong></h3>
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
 		<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/J0Aig1uWMXs?si=bVZMPIEJb69IO8o9">
