{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -136,13 +136,41 @@ description: ""
 </table>
 
 
-<h3><strong>Highlights of Year 2024</strong></h3>
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-		<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/HRo5Yv3hgNc?si=cjprz0JQwWdxjQiO">
-	</iframe>
-</div>
+<h3><strong>From Local Learners to Global Citizens: Our Vietnam Experience</strong></h3>
+<img src="/images/Sparkling_Moment/2024/VT24_1.png">
 
-As we come to the close of the year 2024, let's relive the magic of this unforgettable year. We celebrate the many sparkling moments of self-directed learning, as we embraced new challenges, cherishing the moments that have shaped us. Together, we've created memories that will last a lifetime. What an inspiring, energising and joyful 2024 it was been!
+<p>From 26 to 30 October 2024, 33 students and 4 teachers embarked on a culturally enriching immersion trip to Vietnam. This journey was filled with unique experiences that deepened students’ understanding of Vietnamese culture and traditions. </p>
+<p>In Hanoi, they experienced the renowned Thang Long Water Puppet Theatre, watching a traditional art form that brought Vietnam’s folklore to life. The students also explored the bustling streets of the Old Quarter, gaining insight into local life and history as well as shopped for little souvenirs at the night market.</p>
+
+<img src="/images/Sparkling_Moment/2024/VT24_2.png">
+
+<p>"I truly enjoyed the beautiful and therapeutic sunsets after the conical hat-making as it provided a long and relaxing break from the usual hustle and bustle. It also allowed me to appreciate the difference in life between both countries." (Akshara Parimi 3S5)</p>
+
+<p>Another highlight was the cruise through the stunning Ha Long Bay, a UNESCO World Heritage Site, where students enjoyed a seafood lunch onboard while marveling at the breathtaking landscape. The students also relished an authentic glimpse into Vietnamese daily practices and crafts – through hands-on activities like weaving conical hats, catching fish, and planting rice. </p>
+
+<img src="/images/Sparkling_Moment/2024/VT24_3.png">
+
+<p>"Ha Long Bay truly left me with a new appreciation for nature with its numerous unique islands. Being able to apply some of my Geography knowledge during the visit gave me a new perspective on learning and how helpful it is in the real world. I also loved learning about how the caves were formed and seeing it in real life was really incredible." (Dayna Shanaia Maha, 3H4)</p>
+
+<img src="/images/Sparkling_Moment/2024/VT24_4.png">
+
+<p>A particularly memorable part of the trip was the school exchange at Ban Mai School, where our students connected with local students through cultural food and games, fostering international friendships and understanding. This immersion experience not only broadened students’ global perspectives but also strengthened their appreciation for Vietnam’s rich culture, making it a meaningful journey of learning and connection. </p>
+
+
+<h3><strong>TK Spirit Week: A Kaleidoscope of Experiences at TKGS</strong></h3>
+<img src="/images/Sparkling_Moment/2024/EOY_SW1.png">
+
+<p>The year concluded with a bang at TKGS, as students from all levels came together for another exhilarating TK Spirit Week. This annual event is a testament to the school’s commitment to holistic development, providing students with a platform to showcase their talents, build camaraderie, and express gratitude to those who have shaped their journey.</p>
+
+<p>A diverse range of activities catered to every student’s interests. Secondary One students delved into the world of mathematics with the TK Math Explorer and explored the creative potential of GarageBand. Secondary Two students embarked on thrilling outdoor adventures, pushing their limits and fostering teamwork through high-element challenges and cooking competitions. The camp culminated in a dazzling campfire performance, showcasing the talents and creativity of each class.</p>
+
+<img src="/images/Sparkling_Moment/2024/EOY_SW2.png">
+
+<p>For the Secondary Three students, some highlights included a dialect workshop so as to serve the community better. Classes also took a trip th Sentosa for a spot of class bonding as they built sandcastles together.</p>
+
+<img src="/images/Sparkling_Moment/2024/EOY_SW3.png">
+
+<p>The year's achievements were celebrated at the school's ISH, where Ms. Chew delivered an inspiring address and presented awards to deserving students. This year was particularly special, as three TKGS teachers—Ms. Joyce Tang, Mr. Firdaus, and Ms. Aisha—were honored with top national awards for their dedication and hard work.</p>
 
 
 <h3><strong>Class of 2024 Graduation: A day of Farewells and Beginnings</strong></h3>
