{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -136,6 +136,16 @@ description: ""
 </table>
 
 
+<h3><strong>Experience TKGS 2024</strong></h3>
+<img src="/images/Sparkling_Moment/2024/ETK_Hero.png">
+
+<p>We had a fantastic turn out at Experience TKGS on 16 Nov! What a lovely way to wrap up 2024 - with the opportunity to share our TKGS brand of education with others at our Open House. Do check out our  <a href="https://drive.google.com/file/d/1q2AaMwtGA1uxe1J54Mj8Z0jJc6Z0XPtH/view?usp=drive_link" target="_blank" rel="noopener">e-prospectus</a> to find out what TKGS is all about!</p>
+
+<img src="/images/Sparkling_Moment/2024/ETK_1.png"><br>
+<img src="/images/Sparkling_Moment/2024/ETK_v2.png"><br>
+<img src="/images/Sparkling_Moment/2024/ETK_2.png">
+
+
 <h3><strong>From Local Learners to Global Citizens: Our Vietnam Experience</strong></h3>
 <img src="/images/Sparkling_Moment/2024/VT24_1.png">
 
@@ -166,7 +176,7 @@ description: ""
 
 <img src="/images/Sparkling_Moment/2024/EOY_SW2.png">
 
-<p>For the Secondary Three students, some highlights included a dialect workshop so as to serve the community better and a class trip to Sentosa for a spot of class bonding as they built sandcastles together.</p>
+<p>For the Secondary Three students, some highlights included a dialect workshop so as to serve the community better. Classes also took a trip th Sentosa for a spot of class bonding as they built sandcastles together.</p>
 
 <img src="/images/Sparkling_Moment/2024/EOY_SW3.png">
 
